syntax = "proto3";

package warp.multi_agent.v1;

import "google/protobuf/timestamp.proto";
import "file_content.proto";
import "attachment.proto";
import "options.proto";

option go_package = "kiro-go/internal/warp/pb";

message InputContext {
    message SelectedText {
        string text = 1;
    }

    message Directory {
        string pwd = 1;
        string home = 2;
        bool pwd_file_symbols_indexed = 3;
    }

    message Shell {
        string name = 1;
        string version = 2;
    }

    message OperatingSystem {
        string platform = 1;
        string distribution = 2;
    }

    message Image {
        bytes data = 1;
        string mime_type = 2;
    }

    message Codebase {
        string name = 1;
        string path = 2;
    }

    message File {
        FileContent content = 1;
    }

    message ProjectRules {
        string root_path = 1;
        repeated FileContent active_rule_files = 2;
        repeated string additional_rule_file_paths = 3;
    }

    message Git {
        string head = 1;
    }

    Directory directory = 1;
    OperatingSystem operating_system = 2;
    Shell shell = 3;
    google.protobuf.Timestamp current_time = 4;
    repeated Codebase codebases = 8;
    repeated ProjectRules project_rules = 10;
    Git git = 11;
    repeated ExecutedShellCommand executed_shell_commands = 5;
    repeated SelectedText selected_text = 6;
    repeated Image images = 7;
    repeated File files = 9;
}
